--- a/src/main/resources/public/pages/intro.html
+++ b/src/main/resources/public/pages/intro.html
@@ -153,11 +153,11 @@
           </div> -->
         </div>
         <div style="padding: 5% 10% 0% 15%;">
-          <h4>
+          <p style="font-size: 20px;">
             飯店坐落美麗的金獅湖旁，步行至金獅湖風景區僅需150 公尺，部分客房經大面積落地窗即可欣賞金獅湖風景區美景。<br><br>
             每日早晨由餐廳人員用心製做熱騰騰、豐盛的美味自助式早餐。位於本館2樓的餐廳準備豐富中西式佳餚，清粥小菜、中式熱炒、西點麵包、沙拉、熱湯、咖啡、果汁等自助式餐點。<br><br>
             客房主要設計風格為典雅、溫暖又舒適的取向，並以用心與真誠的態度來服務每位客人，讓每位住客都能有賓至如歸的感受，並備有80個平面車位，熱烈期待各位貴賓的蒞臨。<br><br>
-          </h4>
+          </p>
         </div>
       </div>
       <!-- ################################################################################################ -->
