--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -199,7 +199,7 @@
               探訪螢火蟲、聆聽鳥叫蛙鳴、觀星、遠眺馬拉邦山，四季晨昏變化分明。
               靜謐山水芬多精中，讓1569m美人湯溫泉滑潤肌膚，使您徹底放鬆心曠神怡！</p><br>
             <ul class="nospace pushright">
-              <li><a class="btn" href="#">了解更多</a></li>
+              <li><a class="btn" href="./pages/intro.html">了解更多</a></li>
             </ul>
 
           </div>
