--- a/src/main/resources/public/pages/room.html
+++ b/src/main/resources/public/pages/room.html
@@ -240,7 +240,7 @@
             <div style="margin: 1% 0%;width: 1200px; display: flex; flex-direction: row;justify-content: flex-start;flex-wrap:wrap-reverse;">
         <img class="room_img" src="data:image/jpeg;base64,${element.roomPic}">
         <div class="roomText">
-          <h2>${element.roomType}</h2><br>
+          <h2 style="font-family: 微軟正黑體">${element.roomType}</h2><br>
           <p>房間簡介：<br>
             ${element.content}</p>
           <p>價錢：ＮＴ＄${element.roomPrice} 元</p>
