--- a/src/main/resources/public/frontend/person.html
+++ b/src/main/resources/public/frontend/person.html
@@ -252,17 +252,6 @@
                                     連絡電話
                                   </td>
                                 </tr>
-                                <!-- 信箱 -->
-                                <!-- <tr align="left" style="margin: 10px 0;">
-                                  <td align="center" style="width: 40%;">
-                                    <div>
-                                      信箱
-                                    </div>
-                                  </td>
-                                  <td class="email" align="center" style="width: 60%;">
-                                    信箱
-                                  </td>
-                                </tr> -->
                               </tbody>
                             </table>
                             <div width="174" align="center">
@@ -307,23 +296,17 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-lg-2" style="width: 100px">姓名：</label>
-                  <div class="col-lg-9" style="width:350px">
-                    <input type="text" name="account" class="form-control realName" readOnly="true"></br>
-                  </div>
-                </div>
-                <div class="form-group">
                   <label class="control-label col-lg-2" style="width: 100px">帳號：</label>
                   <div class="col-lg-9" style="width:350px">
                     <input type="text" name="account" class="form-control acc" readOnly="true"></br>
                   </div>
                 </div>
-                <!-- <div class="form-group">
-                  <label class="control-label col-lg-2" style="width: 100px">信箱：</label>
+                <div class="form-group">
+                  <label class="control-label col-lg-2" style="width: 100px">姓名：</label>
                   <div class="col-lg-9" style="width:350px">
-                    <input type="email" value="" name="email" class="form-control email"></br>
+                    <input type="text" name="account" class="form-control realName"></br>
                   </div>
-                </div> -->
+                </div>
                 <div class="form-group">
                   <label class="control-label col-lg-2" style="width: 100px">密碼：</label>
                   <div class="col-lg-9" style="width:350px">
