--- a/src/main/resources/public/frontend/person.html
+++ b/src/main/resources/public/frontend/person.html
@@ -152,7 +152,7 @@
 
     <header id="header" class="hoc clear" style="font-size: 17px;">
       <div id="logo" class="fl_left">
-        <a href="index.html">
+        <a href="../index.html">
           <div style="width: 220px; height: 70px;">
             <img src="images/logo/logo2.png">
           </div>
